src/objects/LoginAccountManagerConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ConsumerKey__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxExecute__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Max Execute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Login Account Manager Config</label>
</CustomObject>